--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,8 @@ dependencies:
   google_fonts:
   multiple_screens:
   dotted_line: 3.0.0
-  webfeed: ^0.6.0
+  dart_rss: ^1.0.1
+  http:
 
 dev_dependencies:
   flutter_test:
