--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,12 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  flutter_launcher_icons: "^0.8.0"
+
+flutter_icons:
+  ios: false
+  android: true
+  image_path: "assets/ic_launcher.png"
 
 flutter:
   uses-material-design: true
