--- a/.github/workflows/build_app.yml
+++ b/.github/workflows/build_app.yml
@@ -16,13 +16,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
-        with:
-          java-version: '12.x'
-
-      - name: Flutter action
-      - uses: subosito/flutter-action@v1.5.0
-      - run: flutter pub get
-      - run: flutter test
-      - run: flutter build appbundle
+    - uses: actions/checkout@v2
+    - uses: actions/setup-java@v1
+      with:
+        java-version: '12.x'
+    - uses: subosito/flutter-action@v1
+      with:
+        channel: 'stable' # or: 'beta', 'dev' or 'master'
+    - run: flutter pub get
+    - run: flutter test
+    - run: flutter build apk
